一些类的常见用法

--- a/Login/Base.lproj/Main.storyboard
+++ b/Login/Base.lproj/Main.storyboard
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UYm-ki-N5V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13528" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="UYm-ki-N5V">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13526"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -26,7 +26,7 @@
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PAV-Ef-Dzl">
                                 <rect key="frame" x="20" y="194" width="105" height="30"/>
-                                <state key="normal" title="3.模拟登录界面"/>
+                                <state key="normal" title="3.处理网络请求"/>
                                 <connections>
                                     <action selector="threeNetwork:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WbI-9r-6C7"/>
                                 </connections>
@@ -38,14 +38,32 @@
                                     <action selector="twoLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="sZ1-PH-L1e"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p1q-JI-Bps">
+                                <rect key="frame" x="20" y="244" width="136" height="30"/>
+                                <state key="normal" title="4.其他一些关键的类"/>
+                                <connections>
+                                    <action selector="fourOtherClass:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vNb-x7-pnl"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eDy-me-9UP">
+                                <rect key="frame" x="20" y="294" width="150" height="30"/>
+                                <state key="normal" title="5.RAC的一些高级用法"/>
+                                <connections>
+                                    <action selector="fiveAdvanceUsage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o1k-NW-eFw"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="p1q-JI-Bps" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="8Xs-Ta-wHH"/>
                             <constraint firstItem="PAV-Ef-Dzl" firstAttribute="top" secondItem="UV0-1f-gvD" secondAttribute="bottom" constant="20" id="9J2-xy-2mB"/>
                             <constraint firstItem="PAV-Ef-Dzl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="B4h-xV-22e"/>
+                            <constraint firstItem="eDy-me-9UP" firstAttribute="top" secondItem="p1q-JI-Bps" secondAttribute="bottom" constant="20" id="DDI-q7-fB7"/>
                             <constraint firstItem="yaK-R8-SqK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="JyQ-Uq-lgb"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="UV0-1f-gvD" secondAttribute="trailing" constant="20" symbolic="YES" id="Oqf-3h-4M5"/>
                             <constraint firstItem="yaK-R8-SqK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="PHy-vb-sNy"/>
+                            <constraint firstItem="eDy-me-9UP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YEA-2j-oNl"/>
+                            <constraint firstItem="p1q-JI-Bps" firstAttribute="top" secondItem="PAV-Ef-Dzl" secondAttribute="bottom" constant="20" id="Yjh-jm-rDf"/>
                             <constraint firstItem="UV0-1f-gvD" firstAttribute="top" secondItem="yaK-R8-SqK" secondAttribute="bottom" constant="20" id="aII-KW-Lfl"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yaK-R8-SqK" secondAttribute="trailing" constant="20" symbolic="YES" id="eI7-cx-OFQ"/>
                             <constraint firstItem="UV0-1f-gvD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="k1I-Ak-jQx"/>
