--- a/Login/Base.lproj/Main.storyboard
+++ b/Login/Base.lproj/Main.storyboard
@@ -52,11 +52,19 @@
                                     <action selector="fiveAdvanceUsage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="o1k-NW-eFw"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W0f-GB-Fpz">
+                                <rect key="frame" x="20" y="344" width="150" height="30"/>
+                                <state key="normal" title="6.RAC的一些操作方法"/>
+                                <connections>
+                                    <action selector="sixOperationMethod:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M0P-o3-rym"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="p1q-JI-Bps" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="8Xs-Ta-wHH"/>
                             <constraint firstItem="PAV-Ef-Dzl" firstAttribute="top" secondItem="UV0-1f-gvD" secondAttribute="bottom" constant="20" id="9J2-xy-2mB"/>
+                            <constraint firstItem="W0f-GB-Fpz" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Ag3-qA-qfH"/>
                             <constraint firstItem="PAV-Ef-Dzl" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="B4h-xV-22e"/>
                             <constraint firstItem="eDy-me-9UP" firstAttribute="top" secondItem="p1q-JI-Bps" secondAttribute="bottom" constant="20" id="DDI-q7-fB7"/>
                             <constraint firstItem="yaK-R8-SqK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="JyQ-Uq-lgb"/>
@@ -64,6 +72,7 @@
                             <constraint firstItem="yaK-R8-SqK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="PHy-vb-sNy"/>
                             <constraint firstItem="eDy-me-9UP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="YEA-2j-oNl"/>
                             <constraint firstItem="p1q-JI-Bps" firstAttribute="top" secondItem="PAV-Ef-Dzl" secondAttribute="bottom" constant="20" id="Yjh-jm-rDf"/>
+                            <constraint firstItem="W0f-GB-Fpz" firstAttribute="top" secondItem="eDy-me-9UP" secondAttribute="bottom" constant="20" id="ZJG-An-2Zc"/>
                             <constraint firstItem="UV0-1f-gvD" firstAttribute="top" secondItem="yaK-R8-SqK" secondAttribute="bottom" constant="20" id="aII-KW-Lfl"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="yaK-R8-SqK" secondAttribute="trailing" constant="20" symbolic="YES" id="eI7-cx-OFQ"/>
                             <constraint firstItem="UV0-1f-gvD" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="k1I-Ak-jQx"/>
